# binterop

./: .gitignore  Cargo.toml  README.md
binterop/: Cargo.toml
binterop-gen/: Cargo.toml  nested.json  test.bintdef  test.json  values.bintdef
binterop-gen/backend/: Cargo.toml
binterop-gen/backend/src/: generator.rs  generator_chumsky.rs  helpers.rs  (+4 more)
binterop-gen/binterop-cli/: Cargo.toml
binterop-gen/binterop-macro/: Cargo.toml
binterop-gen/src/: generator.rs  main.rs  optimization.rs  tokenizer.rs
binterop-wasm-test/guest/: Cargo.toml
binterop-wasm-test/schemas/: main.h
binterop/src/: field.rs  lib.rs  primitives.rs  schema.rs  std.rs  types.rs
binterop/src/types/: array.rs  data.rs  enum.rs  function.rs  heap_array.rs  mod.rs  pointer.rs  primitives.rs  union.rs  vector.rs
binterop_wasm_test/host/: Cargo.toml
binterop_wasm_test/schemas/: helpers.rs  main.bintdef  main.json  main.rs
examples/schemas/: enum.bintdef  enum.h  enum.json  nested.bintdef  nested.json  struct.bintdef  struct.h  struct.json  test.bintdef  union.h  union.json  values.bintdef
schemas/: type.bintdef  vector.bintdef
schemas/examples/: attributes.bintdef  attributes.json  chumsky.bintdef  chumsky.json  chumsky2.bintdef  enum.bintdef  enum.h  enum.json  enum.nim  enum.rs  function.bintdef  function.json  function.nim  function.rs  helpers.rs  multi_include.bintdef  multi_include.json  recursive.bintdef  recursive.json  recursive.nim  recursive.rs  rust.rs  struct.bintdef  struct.h  struct.json  struct.nim  struct.rs  union.bintdef  union.h  union.json  union.nim  union.rs
(+36 files in other folders)
