[package]
name = "binterop"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-str = "0.5.6"
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0.196", features = ["derive"] }
